
- TW-38   Dates in the far future give bad estimates in burndown
          (thanks to Ben Boeckel).
- TW-311  Estimated completion in burndown.daily shows impossible results
          (thanks to Michele Santullo).
- TW-1313 some recurring intervals reset due time to midnight
          (thanks to James Dietrich).
- TW-1425 The 'age' format rounds in odd ways (thanks to Black Ops testing).
- TW-1446 Difference in how relative dates are specified in report filters since 2.3.0
          (thanks to atomicules).
- TW-1481 Unable to assign a completed task as dependency (thanks to Tomas
          Babej).
- TW-1500 Dates formatted as ".age", ".remaining", or ".countdown" often give
          blank results (thanks to Jeremy John Reeder).
- TW-1582 Wrong urgency for first report after reviving task with
          "mod status:pending"
- TW-1658 rc override to non-existent alternate rc quietly uses default (thanks
          to David Patrick).
- TW-1698 tests: 'make test' should exit non-zero if tests failed
          (thanks to Daniel Shahaf).
- TW-1703 When on-modify hook is installed, some messages print UUIDs
          instead of IDs (thanks to Robin Green).
- TW-1704 Use Task::identifier to reference the Task in the output
- TW-1705 Directories in .task/hooks should not be reported as invalid hooks
          (thanks to Tomas Babej).
- TW-1714 Starting recurring task starts all recurrences (thanks to Robin Green).
- TW-1719 Description cannot contain improper ordinals (thanks to Ben Boeckel).
- TW-1720 CmdContext uses a mix of both throw and std::cout to convey
          errors (thanks to Paul Beckingham).
- TW-1723 task info causes segfault (thanks to Roman Golovin).
- TW-1724 some commands show color codes when redirected (thanks to Alan Young).
- TW-1729 zsh completion: zregexparse:4: not enough regex argument (thanks to
          Daniel Shahaf).
- TW-1733 taskwarrior 2.5.0 can not compile FreeBSD 10.1 (thanks to ribbon).